fixed map overflow

--- a/src/Styles/Location.css
+++ b/src/Styles/Location.css
@@ -1,60 +1,67 @@
-.Location{
-    width: 100%;
-    color: yellow;
+.Location {
+	width: 100%;
+	color: yellow;
 }
 
 .map-location {
-    padding-left: 3rem;
-    width: 50%;
+	box-sizing: border-box;
+	width: 50%;
+	display: inline-block;
 }
 .content-location {
-    text-align: left;
-    width: 50%;
-}
-  
-.halfnaja {
-    display: table-cell;
-    vertical-align: middle;
-}
-.map-google{
-    /* height: 400px; */
-}
-.mgl40{
-    margin-left: 40px;
-}
-.content-location-header{
-    font-size: 60px;
-    color:#f59f66;
-    font-weight: 400;
-}
-.content-location-body{
-    font-size: 20px;
-    color: rgb(201, 211, 111);
-}
-.content-location-footer{
-    margin-top: 10px;
-    font-size: 30px;
-    color: rgb(113, 111, 211);
+	text-align: left;
+	width: 50%;
+	display: inline-block;
 }
 
+
+.content-location-header {
+	font-size: 60px;
+	color: #f59f66;
+	font-weight: 400;
+}
+.content-location-body {
+	font-size: 20px;
+	color: rgb(201, 211, 111);
+}
+.content-location-footer {
+	margin-top: 10px;
+	font-size: 30px;
+	color: rgb(113, 111, 211);
+}
+
+.map-flexbox {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+    align-items: center;
+    padding: 0 40px;
+    
+}
+
+.google-map-size{
+    box-sizing: border-box;
+    width: 100%;
+    padding-right: 3rem;
+}
 @media (max-width: 768px) {
-    .Location{
-        width: 100%;
-        color: yellow;
+	.map-flexbox {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
     }
-    .halfnaja {
-        display: block;
-    }
-    .content-location {
-        text-align: center;
-        width: 100%;
-    }
-    .map-location {
+    .map-location{
+        order: 2;
         padding-left: 0;
-        /* display: flex; */
-        /* justify-content: center; */
-        /* padding-left: 3rem; */
-        /* margin: auto; */
+        width: 70vw;
     }
-} 
-  
+    .content-location{
+        text-align: center;
+        margin-bottom: 24px;
+        width: 70vw;
+    }
+    .google-map-size{
+        
+        padding-right: 0;
+    }
+}
